--- a/Loboteca/Loboteca/Views/Tecnologias/Tecnologias.cshtml
+++ b/Loboteca/Loboteca/Views/Tecnologias/Tecnologias.cshtml
@@ -23,6 +23,8 @@
                 <li><img src="~/images/revistaE.png" alt="Revistas" class="Revistas"><a href="#revistas">Revistas</a></li>
                 <li><img src="~/images/sancionesE.png" alt="Sanciones" class="sanciones"><a href="@Url.Action("Sanciones", "Sanciones")">Sanciones</a></li>
                 <li><img src="~/images/login_ama.png" alt="Perfil" class="perfil"><a href="@Url.Action("Info_user", "Info_user")">Perfil</a></li>
+                <li><button class="btn-logout" onclick="window.location.href='@Url.Action("Logout", "Login")'">Cerrar Sesión</button></li>
+
             </ul>
         </nav>
     </header>
