--- a/Loboteca/Loboteca/Views/Usuarios/Details.cshtml
+++ b/Loboteca/Loboteca/Views/Usuarios/Details.cshtml
@@ -52,6 +52,13 @@
                 <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Estado)</dt>
                 <dd class="col-sm-10">@Html.DisplayFor(model => model.Estado)</dd>
 
+                <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Contra)</dt>
+                <dd class="col-sm-10">@Html.DisplayFor(model => model.Contra)</dd>
+
+                <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Rol)</dt>
+                <dd class="col-sm-10">@Html.DisplayFor(model => model.Rol)</dd>
+
+
                 <dt class="col-sm-2">@Html.DisplayNameFor(model => model.IdCarreraNavigation)</dt>
                 <dd class="col-sm-10">@Html.DisplayFor(model => model.IdCarreraNavigation.Nombre)</dd>
             </dl>
