--- a/Loboteca/Loboteca/Views/Prestamo/Create.cshtml
+++ b/Loboteca/Loboteca/Views/Prestamo/Create.cshtml
@@ -41,14 +41,12 @@
 
                 <div class="form-group">
                     <label asp-for="FechaDePrestamo" class="control-label">Fecha de Préstamo</label>
-                    <input asp-for="FechaDePrestamo" type="date" class="form-control" />
-                    <span asp-validation-for="FechaDePrestamo" class="text-danger"></span>
+                    <input asp-for="FechaDePrestamo" type="hidden" class="form-control" readonly />
                 </div>
 
                 <div class="form-group">
                     <label asp-for="FechaDeTermino" class="control-label">Fecha de Término</label>
-                    <input asp-for="FechaDeTermino" type="date" class="form-control" />
-                    <span asp-validation-for="FechaDeTermino" class="text-danger"></span>
+                    <input asp-for="FechaDeTermino" type="hidden" class="form-control" readonly />
                 </div>
 
                 <div class="form-group">
