--- a/Loboteca/Loboteca/Views/Inventarios/Edit.cshtml
+++ b/Loboteca/Loboteca/Views/Inventarios/Edit.cshtml
@@ -1,44 +1,34 @@
 ﻿@model Loboteca.Models.Inventario
 
-@{
-    ViewData["Title"] = "Edit";
-}
+<h1>Editar Inventario</h1>
 
-<h1>Edit</h1>
+<form asp-action="Edit">
+    <input type="hidden" asp-for="Id" />
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-<h4>Inventario</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="CantidadReal" class="control-label"></label>
-                <input asp-for="CantidadReal" class="form-control" />
-                <span asp-validation-for="CantidadReal" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CantidadSistema" class="control-label"></label>
-                <input asp-for="CantidadSistema" class="form-control" />
-                <span asp-validation-for="CantidadSistema" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Observaciones" class="control-label"></label>
-                <input asp-for="Observaciones" class="form-control" />
-                <span asp-validation-for="Observaciones" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+    <div class="form-group">
+        <label asp-for="CantidadReal" class="control-label"></label>
+        <input asp-for="CantidadReal" class="form-control" />
+        <span asp-validation-for="CantidadReal" class="text-danger"></span>
     </div>
-</div>
+
+    <div class="form-group">
+        <label asp-for="CantidadSistema" class="control-label"></label>
+        <input asp-for="CantidadSistema" class="form-control" />
+        <span asp-validation-for="CantidadSistema" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="Observaciones" class="control-label"></label>
+        <input asp-for="Observaciones" class="form-control" />
+        <span asp-validation-for="Observaciones" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <input type="submit" value="Guardar" class="btn btn-primary" />
+    </div>
+</form>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-secondary">Volver al listado</a>
 </div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
