--- a/Loboteca/Loboteca/Views/Admin/Admin.cshtml
+++ b/Loboteca/Loboteca/Views/Admin/Admin.cshtml
@@ -44,8 +44,8 @@
                 <li><a href="@Url.Action("Index", "Libro")"><img src="~/images/Libro.png" alt="Libro"> Libro</a></li>
                 <li><a href="@Url.Action("Index", "Revista")"><img src="~/images/Revista.png" alt="Revista"> Revista</a></li>
                 <li><a href="@Url.Action("Index", "Prestamo")"><img src="~/images/Prestamo.png" alt="Prestamo"> Préstamo</a></li>
-                <li><a href="@Url.Action("Index", "Devoluciones")"><img src="~/images/devoluciones.png" alt="Devoluciones"> Devoluciones</a></li>
                 <li><a href="@Url.Action("Index", "Ingresoes")"><img src="~/images/ingresos.png" alt="Ingresoes"> Ingresos</a></li>
+                <li><a href="@Url.Action("Index", "InventarioLibroes")"><img src="~/images/inventario.png" alt="Inventarios"> Inventario </a></li>
             </ul>
         </nav>
 
