--- a/Loboteca/Loboteca/Views/InventarioLibroes/Create.cshtml
+++ b/Loboteca/Loboteca/Views/InventarioLibroes/Create.cshtml
@@ -39,11 +39,11 @@
             <form asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="IdInventario" class="control-label">ID Inventario</label>
+                    <label asp-for="IdInventario" class="control-label">Inventario</label>
                     <select asp-for="IdInventario" class="form-control" asp-items="ViewBag.IdInventario"></select>
                 </div>
                 <div class="form-group">
-                    <label asp-for="IdLibro" class="control-label">ID Libro</label>
+                    <label asp-for="IdLibro" class="control-label">Libro</label>
                     <select asp-for="IdLibro" class="form-control" asp-items="ViewBag.IdLibro"></select>
                 </div>
                 <div class="form-group">
