--- a/Loboteca/Loboteca/Views/Ingresoes/Index.cshtml
+++ b/Loboteca/Loboteca/Views/Ingresoes/Index.cshtml
@@ -68,9 +68,9 @@
                             <td>@Html.DisplayFor(modelItem => item.IdLibroNavigation.Titulo)</td>
 
                             <td>
-                                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning">Editar</a> |
-                                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info">Detalles</a> |
-                                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Eliminar</a>
+                               
+                                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info">Detalles</a>
+                               
                             </td>
                         </tr>
                     }
