--- a/Loboteca/Loboteca/Views/InventarioLibroes/Details.cshtml
+++ b/Loboteca/Loboteca/Views/InventarioLibroes/Details.cshtml
@@ -4,7 +4,6 @@
     Layout = null;
 }
 
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -49,16 +48,22 @@
                 <dt class="col-sm-4">Tipo de Inventario</dt>
                 <dd class="col-sm-8">@Html.DisplayFor(model => model.InventarioTipo)</dd>
 
-                <dt class="col-sm-4">ID Inventario</dt>
-                <dd class="col-sm-8">@Html.DisplayFor(model => model.IdInventarioNavigation.Id)</dd>
+                <dt class="col-sm-4">Nombre del Libro</dt>
+                <dd class="col-sm-8">@Model.IdLibroNavigation?.Titulo</dd>
 
-                <dt class="col-sm-4">ID Libro</dt>
-                <dd class="col-sm-8">@Html.DisplayFor(model => model.IdLibroNavigation.Id)</dd>
+                <dt class="col-sm-4">Cantidad Real</dt>
+                <dd class="col-sm-8">@Model.IdInventarioNavigation?.CantidadReal</dd>
+
+                <dt class="col-sm-4">Cantidad en Sistema</dt>
+                <dd class="col-sm-8">@Model.IdInventarioNavigation?.CantidadSistema</dd>
+
+                <dt class="col-sm-4">Observaciones</dt>
+                <dd class="col-sm-8">@Model.IdInventarioNavigation?.Observaciones</dd>
             </dl>
 
             <div class="botones">
-                <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn-success">Editar</a>
-                <a asp-action="Index" class="btn-secondary">Regresar a la lista</a>
+               
+                <a asp-action="Index" class="btn btn-secondary">Regresar a la lista</a>
             </div>
         </div>
     </main>
