--- a/Loboteca/Loboteca/Views/Prestamo/Index.cshtml
+++ b/Loboteca/Loboteca/Views/Prestamo/Index.cshtml
@@ -74,9 +74,9 @@
                                 else
                                 {
                                 }
-                                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning">Editar</a> |
-                                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info">Detalles</a> |
-                                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Eliminar</a> |
+                              
+                                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info">Detalles</a>
+                               
                                 <form asp-action="Devolver" asp-route-id="@item.Id" method="post" style="display:inline;">
                                     <button type="submit" class="btn btn-success">Devolver</button>
                                 </form>
