--- a/Loboteca/Loboteca/Views/Info_user/Info_user.cshtml
+++ b/Loboteca/Loboteca/Views/Info_user/Info_user.cshtml
@@ -120,13 +120,19 @@
                         window.location.href = '@Url.Action("Tecnologias", "Tecnologias")';
                         break;
                     case 2:
-                        window.location.href = '@Url.Action("Bio", "Bio")';
+                        window.location.href = '@Url.Action("Negocios", "Negocios")';
                         break;
                     case 3:
-                        window.location.href = '@Url.Action("IngCivil", "Civil")';
+                        window.location.href = '@Url.Action("Mecatronica", "Mecatronica")';
                         break;
                     case 4:
-                        window.location.href = '@Url.Action("Negocios", "Negocios")';
+                        window.location.href = '@Url.Action("Energia", "Energia")';
+                        break;
+                    case 5:
+                        window.location.href = '@Url.Action("Biotecnologia", "Biotecnologia")';
+                        break;
+                    case 6:
+                        window.location.href = '@Url.Action("Industri", "Industri")';
                         break;
                     default:
                         alert("No se pudo determinar tu página anterior.");
